# nymphescc

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  entangled.dhall  pyproject.toml
.entangled/scripts/: make.lua  message-table.lua
.entangled/syntax/: dhall.xml
.entangled/templates/escience/: theme.css
docs/: index.html
lit/: core.md  db_entry.glade  gtk.md  messages.md  patch-db.md  wx.md
nymphescc/: __init__.py  core.py  db.py  gtk-style.css  gtk.py  main.py  messages.dhall  messages.ini  messages.py  setting.py  wx.py
tools/: icon_view.py
