[tool.poetry]
name = "nymphescc"
version = "0.1.0"
description = ""
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
wxPython = "^4.1.1"
mido = "^1.2.10"
dhall = "^0.1.12"
pycairo = "^1.20.1"
PyGObject = "^3.42.0"
alsa-midi = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0rc1"
pytest-mypy = "^0.9.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
nymphescc = "nymphescc.gtk:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--mypy", "--cov"]
testpaths = ["nymphescc"]
python_files = "*.py"

[tool.mypy]
ignore_missing_imports = true
